errormessage
ocalhost ~/Final/OS-final-project/os-f25-BlakeBrenner-main 2 # make
gcc -ffreestanding -mgeneral-regs-only -mno-mmx -m32 -march=i386 -fno-pie -fno-stack-protector -g3 -Wall  -c -g -o obj/kernel_main.o src/kernel_main.c
gcc -ffreestanding -mgeneral-regs-only -mno-mmx -m32 -march=i386 -fno-pie -fno-stack-protector -g3 -Wall  -c -g -o obj/rprintf.o src/rprintf.c
gcc -ffreestanding -mgeneral-regs-only -mno-mmx -m32 -march=i386 -fno-pie -fno-stack-protector -g3 -Wall  -c -g -o obj/page.o src/page.c
gcc -ffreestanding -mgeneral-regs-only -mno-mmx -m32 -march=i386 -fno-pie -fno-stack-protector -g3 -Wall  -c -g -o obj/paging.o src/paging.c
gcc -ffreestanding -mgeneral-regs-only -mno-mmx -m32 -march=i386 -fno-pie -fno-stack-protector -g3 -Wall  -c -g -o obj/shell.o src/shell.c
src/shell.c: In function ‘shell_run’:
src/shell.c:430:13: warning: unused variable ‘len’ [-Wunused-variable]
  430 |         int len = readline(line,sizeof(line));
      |             ^~~
gcc -ffreestanding -mgeneral-regs-only -mno-mmx -m32 -march=i386 -fno-pie -fno-stack-protector -g3 -Wall  -c -g -o obj/interrupt.o src/interrupt.c
src/interrupt.c:256:6: error: conflicting types for ‘stub_isr’; have ‘void(struct interrupt_frame *)’
  256 | void stub_isr(struct interrupt_frame *f) {
      |      ^~~~~~~~
In file included from src/interrupt.c:2:
src/interrupt.h:91:13: note: previous declaration of ‘stub_isr’ with type ‘void(void)’
   91 | extern void stub_isr(void);
      |             ^~~~~~~~
make: *** [Makefile:38: obj/interrupt.o] Error 1
